--- a/changelog.yaml
+++ b/changelog.yaml
@@ -357,3 +357,8 @@
     - Household entry page now opts for "Single"/"Married" instead of the number of
       adults.
   date: 2022-03-09 00:00:01
+- bump: patch
+  date: 2022-03-10 00:00:00
+  changes:
+    added:
+    - YAML changelog.
