--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -30,11 +32,11 @@ jobs:
       - name: Preview changelog update
         run: ".github/get-changelog-diff.sh"
       - name: Update changelog
-        run: |
-          git config --global user.email "nikhil@policyengine.org"
-          git config --global user.name "Github Actions[bot]"
-          git commit -m "Update changelog" -a
-          git push origin ${GITHUB_REF##*/}
+        uses: EndBug/add-and-commit@v8 # You can change this to use a specific version.
+        with:
+          add: 'CHANGELOG.md'
+          author_name: Github Actions[bot]
+          message: "Update changelog"
   test:
     name: Test
     runs-on: ubuntu-latest
