--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Preview changelog update
         run: ".github/get-changelog-diff.sh"
       - name: Update changelog
-        uses: EndBug/add-and-commit@v8 # You can change this to use a specific version.
+        uses: EndBug/add-and-commit@v8
         with:
           add: 'CHANGELOG.md'
           author_name: Github Actions[bot]
