Add new entry to changelog

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -367,3 +367,7 @@
     fixed:
     - US policy page broke when selecting IRS parameters.
   date: 2022-03-10 00:00:00
+- bump: patch
+  changes:
+    added:
+    - YAML-based changelog.
