Don't deploy before publishing

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,6 +17,7 @@ jobs:
           options: ". -l 79 --check"
   test:
     name: Test and Deploy
+    needs: publish
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
