--- a/changelog.yaml
+++ b/changelog.yaml
@@ -382,3 +382,8 @@
     fixed:
     - PR action now previews changelog updates.
   date: 2022-03-11 15:19:49
+- bump: patch
+  changes:
+    fixed:
+    - Font issues when users don't have the fonts installed.
+  date: 2022-03-11 22:21:00
