--- a/changelog.yaml
+++ b/changelog.yaml
@@ -392,3 +392,7 @@
     fixed:
     - Font issues when users don't have the fonts installed.
   date: 2022-03-13 20:46:24
+- bump: minor
+  changes:
+    added:
+    - Earnings variation charts for the US.
