--- a/changelog.yaml
+++ b/changelog.yaml
@@ -411,6 +411,8 @@
   changes:
     added:
     - Debugging tools for household charts.
-    changed:
-    - OpenFisca-US bumped to 0.37.7
   date: 2022-03-16 22:47:57
+- bump: patch
+  changes:
+    changed:
+    - Bump OpenFisca-US to 0.3.7.
