--- a/changelog.yaml
+++ b/changelog.yaml
@@ -417,3 +417,7 @@
     changed:
     - Bump OpenFisca-US to 0.3.7.
   date: 2022-03-17 12:14:12
+- bump: patch
+  changes:
+    changed:
+    - Bump OpenFisca-Tools to 0.7.0.
