--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -29,7 +29,7 @@
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "rehype-raw": "^6.1.0",
-    "styled-components": "^5.3.1",
+    "styled-components": "5.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
