--- a/changelog.yaml
+++ b/changelog.yaml
@@ -439,3 +439,4 @@
     - HTTP redirects to HTTPS.
     - Commentary on landing page changed to Blog.
     - Make header spacing more responsive.
+    - Remove Home tab in the top menu.
