--- a/changelog.yaml
+++ b/changelog.yaml
@@ -440,3 +440,4 @@
     - Commentary on landing page changed to Blog.
     - Make header spacing more responsive.
     - Remove Home tab in the top menu.
+    - Fix typo on landing page.
