--- a/changelog.yaml
+++ b/changelog.yaml
@@ -441,3 +441,4 @@
     - Make header spacing more responsive.
     - Remove Home tab in the top menu.
     - Fix typo on landing page.
+    - Set card title to PolicyEngine.
