Fix Link to github.com/policyengine at `Contribute to our work on GitHub` on homepage #578

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -442,3 +442,4 @@
     - Remove Home tab in the top menu.
     - Fix typo on landing page.
     - Set card title to PolicyEngine.
+    - Link to GitHub on the landing page.
