Fix Flags overlap on landing page on mobile #571

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -443,3 +443,4 @@
     - Fix typo on landing page.
     - Set card title to PolicyEngine.
     - Link to GitHub on the landing page.
+    - Add spacing in landing page and fix card ordering.
