--- a/changelog.yaml
+++ b/changelog.yaml
@@ -458,3 +458,7 @@
     - Baseline policy is now editable.
     added:
     - Snapshot and reset buttons to the US app.
+- bump: patch
+  changes:
+    fixed:
+    - Deployment timeout increased.
