--- a/changelog.yaml
+++ b/changelog.yaml
@@ -450,3 +450,7 @@
     fixed:
     - Ensures the docker instance upgrades pip before installing packages.
   date: 2022-03-24 21:40:50
+- bump: minor
+  changes:
+    added:
+    - Options to see the household earnings charts as difference only.
