Reduce plotly bundle size

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -475,3 +475,4 @@
     - 50-70% speed increase in simulations.
     - Broken IFrame removed from FAQ pages.
     - Blog subtitle removed.
+  date: 2022-03-29 10:35:30
