--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -16,19 +16,20 @@
     "ga-4-react": "^0.1.281",
     "grommet": "^2.18.0",
     "moment": "^2.29.1",
-    "plotly.js": "^2.5.1",
+    "plotly.js-basic-dist-min": "^2.5.1",
+    "react-plotly.js": "^2.5.1",
     "polished": "^4.1.3",
     "pretty-ms": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
-    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.3.0",
     "react-router-ga": "^1.2.3",
     "react-scripts": "4.0.3",
     "react-share": "^4.4.0",
     "rehype-raw": "^6.1.0",
+    "source-map-explorer": "^2.5.2",
     "styled-components": "5.0.0",
     "web-vitals": "^1.1.2"
   },
@@ -36,7 +37,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
