--- a/changelog.yaml
+++ b/changelog.yaml
@@ -476,3 +476,7 @@
     - Broken IFrame removed from FAQ pages.
     - Blog subtitle removed.
   date: 2022-03-29 10:35:30
+- bump: patch
+  changes:
+    fixed:
+    - Population impact breakdown correctly handles baseline-editing simulations.
