--- a/changelog.yaml
+++ b/changelog.yaml
@@ -488,3 +488,7 @@
     fixed:
     - Population impact breakdown correctly handles baseline-editing simulations.
   date: 2022-03-30 10:13:57
+- bump: minor
+  changes:
+    added:
+    - CDCC parameters.
