Add wealth deciles

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -504,3 +504,7 @@
     changed:
     - OpenFisca-UK bumped to 0.18.0
   date: 2022-04-03 20:15:37
+- bump: minor
+  changes:
+    added:
+    - Option to see UK-wide effects by wealth decile.
