--- a/changelog.yaml
+++ b/changelog.yaml
@@ -508,3 +508,5 @@
   changes:
     added:
     - Option to see UK-wide effects by wealth decile.
+    changed:
+    - About and donate tabs removed.
