--- a/changelog.yaml
+++ b/changelog.yaml
@@ -511,3 +511,8 @@
     removed:
     - About and donate tabs removed.
   date: 2022-04-05 15:40:36
+- bump: minor
+  changes:
+    fixed:
+    - Hover cards now have the same font (Ubuntu) as the app itself.
+  date: 2022-04-05 23:45:36
