Fix Wealth deciles don't update chart axis labels #632

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -520,3 +520,4 @@
   changes:
     fixed:
     - Set default US policy selected to IRS income tax rates.
+    - Corrected decile chart axes when using wealth deciles.
