--- a/changelog.yaml
+++ b/changelog.yaml
@@ -584,3 +584,7 @@
   changes:
     added:
     - US population simulations for basic income parameters.
+- bump: patch
+  changes:
+    changed:
+    - Increase memory allocation on the server to 8GB (needed for US population impacts).
