--- a/changelog.yaml
+++ b/changelog.yaml
@@ -590,3 +590,7 @@
     changed:
     - Increase memory allocation on the server to 8GB (needed for US population impacts).
   date: 2022-04-22 12:17:10
+- bump: patch
+  changes:
+    fixed:
+    - Download instead of generate the CPS dataset for the US microsimulation.
