Revert memory increase

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -595,3 +595,7 @@
     fixed:
     - Download instead of generate the CPS dataset for the US microsimulation.
   date: 2022-04-22 13:47:44
+- bump: patch
+  changes:
+    fixed:
+    - Memory allocation reduced back to 6GB (unnecessary given previous PR).
