--- a/changelog.yaml
+++ b/changelog.yaml
@@ -617,3 +617,7 @@
     fixed:
     - Set decimals on y axis of poverty and decile graphs dynamically.
   date: 2022-04-24 22:10:24
+- bump: minor
+  changes:
+    added:
+    - Legislation explorer.
