--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -13,17 +13,18 @@
     "antd": "^4.16.13",
     "bootstrap": "^5.1.3",
     "framer-motion": "^4.1.17",
+    "fuzzysort": "^1.2.1",
     "ga-4-react": "^0.1.281",
     "grommet": "^2.18.0",
     "moment": "^2.29.1",
     "plotly.js-basic-dist-min": "^2.5.1",
-    "react-plotly.js": "^2.5.1",
     "polished": "^4.1.3",
     "pretty-ms": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.3.0",
     "react-router-ga": "^1.2.3",
     "react-scripts": "4.0.3",
