Remove unused import and versioning

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -637,3 +637,7 @@
     added:
     - UK country selector for country-specific analysis.
   date: 2022-04-29 10:07:07
+- bump: minor
+  changes:
+    added:
+    - API explorer improvements.
