--- a/changelog.yaml
+++ b/changelog.yaml
@@ -646,3 +646,9 @@
   changes:
     fixed:
     - Fixed a bug causing incorrect descriptions for variables without descriptions.
+- bump: patch
+  changes:
+    added:
+    - Computation tree, leaf nodes and dependencies endpoints.
+    changed:
+    - UK country selector for country-specific analysis now in the baseline rather than reform.
