--- a/changelog.yaml
+++ b/changelog.yaml
@@ -652,3 +652,7 @@
     - Computation tree, leaf nodes and dependencies endpoints.
     changed:
     - UK country selector for country-specific analysis now in the baseline rather than reform.
+- bump: patch
+  changes:
+    fixed:
+    - Fixed a bug causing simulations with country selections to not load URLs correctly.
