--- a/changelog.yaml
+++ b/changelog.yaml
@@ -670,3 +670,9 @@
     fixed:
     - Fixed a bug which prevented the country specifier from applying.
   date: 2022-05-04 18:41:39
+- bump: minor
+  changes:
+    fixed:
+    - Bug in which some baseline-editing policies would have no net impact.
+    changed:
+    - Bumped OpenFisca-US version to 0.61.0.
