Add state income tax breakdown and ACP controls

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -692,3 +692,4 @@
     changed:
       - Allow selecting any US state.
       - Add US state income tax.
+      - Add controls for Affordable Connectivity Program amount.
