--- a/changelog.yaml
+++ b/changelog.yaml
@@ -699,3 +699,7 @@
     fixed:
     - Fixed a bug causing deployments to fail.
   date: 2022-05-12 01:48:22
+- bump: patch
+  changes:
+    fixed:
+    - Fixed NI thresholds in the UK.
