--- a/changelog.yaml
+++ b/changelog.yaml
@@ -704,3 +704,7 @@
     fixed:
     - Fixed NI thresholds in the UK.
   date: 2022-05-19 17:51:44
+- bump: patch
+  changes:
+    changed:
+    - Bumped openfisca-uk to 0.23.2.
