--- a/changelog.yaml
+++ b/changelog.yaml
@@ -709,3 +709,7 @@
     changed:
     - Bumped openfisca-uk to 0.23.2.
   date: 2022-05-22 16:04:01
+- bump: patch
+  changes:
+    changed:
+    - Bumped openfisca-uk to 0.23.3.
