--- a/changelog.yaml
+++ b/changelog.yaml
@@ -734,3 +734,7 @@
     changed:
     - Bump OpenFisca-UK to add government cost-of-living support policy.
   date: 2022-05-26 13:26:35
+- bump: minor
+  changes:
+    changed:
+    - Bump OpenFisca-UK.
