Add more references

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -765,3 +765,7 @@
     fixed:
     - Bug causing the app to break when selecting a UK region.
   date: 2022-06-03 18:55:05
+- bump: minor
+  changes:
+    changed:
+    - More references shown in parameters for country models.
