--- a/changelog.yaml
+++ b/changelog.yaml
@@ -792,3 +792,7 @@
     - US population impact page now fully visible.
     - US state selector includes US and MA.
   date: 2022-06-09 14:30:58
+- bump: minor
+  changes:
+    removed:
+    - US population impact page.
