--- a/changelog.yaml
+++ b/changelog.yaml
@@ -797,3 +797,7 @@
     removed:
     - US population impact page.
   date: 2022-06-09 17:08:58
+- bump: patch
+  changes:
+    fixed:
+    - Fixed bugs causing the US and UK packages to not handle structural reforms.
