--- a/changelog.yaml
+++ b/changelog.yaml
@@ -813,3 +813,4 @@
     added:
     - Abolish switches for main taxes and benefits in the US.
     - Basic income parameters and flat taxes for the US.
+    - More icons and organization to the policy parameter menus.
