--- a/changelog.yaml
+++ b/changelog.yaml
@@ -827,3 +827,9 @@
     changed:
     - OpenFisca-US bumped to 0.81.1.
   date: 2022-06-22 02:47:19
+- bump: minor
+  changes:
+    changed:
+    - OpenFisca-US bumped to 0.83.0.
+    added:
+    - US impact page with a disclaimer.
