--- a/changelog.yaml
+++ b/changelog.yaml
@@ -839,14 +839,14 @@
     added:
     - US End Child Poverty Act parameters.
   date: 2022-06-22 20:55:08
-- bump: minor
+- bump: patch
   changes:
     changed:
     - Use shorter End Child Poverty Act parameter names.
   date: 2022-06-22 22:14:06
-- bump: patch
+- bump: minor
   changes:
     fixed:
-    - Bug causing baseline reforms to not show in the household impact page.
+    - A bug causing household baseline reforms to not calculate.
     added:
-    - Basic income phase-out parameters.
+    - Basic income phase-outs in the US.
