Add basic income to accounting table

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -850,3 +850,4 @@
     - A bug causing household baseline reforms to not calculate.
     added:
     - Basic income phase-outs in the US.
+    - Basic income in the accounting table.
