--- a/changelog.yaml
+++ b/changelog.yaml
@@ -864,3 +864,8 @@
     changed:
     - State taxes no longer simulated on US-wide impacts.
   date: 2022-06-25 05:49:55
+- bump: minor
+  changes:
+    fixed:
+    - Spacing issues on the policy overview.
+    
