Remove AGI from household table

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -876,3 +876,7 @@
     fixed:
     - Bugs with adult dependents.
   date: 2022-06-25 21:04:22
+- bump: patch
+  changes:
+    fixed:
+    - AGI removed from the household accounting table.
