--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.3",
+    "eslint": "^8.19.0",
     "framer-motion": "^4.1.17",
     "fuzzysort": "^1.2.1",
     "ga-4-react": "^0.1.281",
     "grommet": "^2.18.0",
+    "jest": "^28.1.2",
     "moment": "^2.29.1",
     "plotly.js-basic-dist-min": "^2.5.1",
     "polished": "^4.1.3",
@@ -44,7 +46,9 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "eslint:recommended",
+      "jest"
     ]
   },
   "browserslist": {
