--- a/changelog.yaml
+++ b/changelog.yaml
@@ -883,3 +883,7 @@
     removed:
     - Help button, temporarily.
   date: 2022-06-28 17:35:16
+- bump: minor
+  changes:
+    changed:
+    - Mobile responsiveness and usability improved.
