--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -3,40 +3,45 @@
   "version": "1.69.0",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.0.4",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.13",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@vitejs/plugin-react": "^1.3.2",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "antd": "^4.21.5",
     "bootstrap": "^5.1.3",
-    "framer-motion": "^4.1.17",
-    "fuzzysort": "^1.2.1",
+    "framer-motion": "^6.3.16",
+    "fuzzysort": "^2.0.1",
     "ga-4-react": "^0.1.281",
-    "grommet": "^2.18.0",
-    "moment": "^2.29.1",
-    "plotly.js-basic-dist-min": "^2.5.1",
-    "polished": "^4.1.3",
-    "pretty-ms": "^7.0.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.2",
-    "react-markdown": "^7.0.1",
+    "grommet": "^2.25.0",
+    "moment": "^2.29.3",
+    "plotly.js-basic-dist-min": "^2.12.1",
+    "polished": "^4.2.2",
+    "pretty-ms": "^8.0.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-plotly.js": "^2.5.1",
-    "react-router-dom": "^5.3.0",
-    "react-router-ga": "^1.2.3",
-    "react-scripts": "4.0.3",
+    "react-router": "^5.3.3",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
-    "rehype-raw": "^6.1.0",
+    "rehype-raw": "^6.1.1",
     "source-map-explorer": "^2.5.2",
-    "styled-components": "5.0.0",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.5",
+    "vite": "^2.9.13",
+    "vite-plugin-svgr": "^2.2.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "test": "craco test",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
@@ -54,11 +59,19 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.0",
-    "concurrently": "^6.3.0",
-    "craco-less": "^1.20.0",
-    "less": "^4.1.2",
-    "less-watch-compiler": "^1.16.3",
-    "react-styleguidist": "^11.1.7"
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@popperjs/core": "^2.10.2",
+    "@testing-library/dom": ">=7.21.4",
+    "@types/react": ">=17.0.0 <18.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "less": "^4.1.3",
+    "plotly.js": ">1.34.0",
+    "react-is": ">= 16.8.0",
+    "typescript": ">=3.2.1 <4.0.0 || >=4.0.0 <5.0.0",
+    "vite": "^2.3.2",
+    "vite-plugin-markdown": "^2.0.2",
+    "vite-plugin-svgr": "^0.3.0"
   }
 }
