--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -27,8 +27,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-plotly.js": "^2.5.1",
-    "react-router": "^5.3.3",
-    "react-router-dom": "5.3.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
     "rehype-raw": "^6.1.1",
@@ -59,17 +59,17 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": ">=7.0.0 <8.0.0",
-    "@babel/plugin-syntax-flow": "^7.14.5",
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@popperjs/core": "^2.10.2",
-    "@testing-library/dom": ">=7.21.4",
-    "@types/react": ">=17.0.0 <18.0.0",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.18.6",
+    "@popperjs/core": "^2.11.5",
+    "@testing-library/dom": "^8.14.0",
+    "@types/react": "^18.0.14",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "less": "^4.1.3",
-    "plotly.js": ">1.34.0",
-    "react-is": ">= 16.8.0",
-    "typescript": ">=3.2.1 <4.0.0 || >=4.0.0 <5.0.0",
+    "plotly.js": "^2.12.1",
+    "react-is": "^18.2.0",
+    "typescript": "^4.7.4",
     "vite": "^2.3.2",
     "vite-plugin-markdown": "^2.0.2",
     "vite-plugin-svgr": "^0.3.0"
