--- a/changelog.yaml
+++ b/changelog.yaml
@@ -903,3 +903,7 @@
     added:
     - EITC eligibility parameters.
   date: 2022-07-06 06:19:51
+- bump: patch
+  changes:
+    fixed:
+    - Style issues with the footer.
