--- a/policyengine-client/package.json
+++ b/policyengine-client/package.json
@@ -66,9 +66,12 @@
     "@testing-library/dom": "^8.14.0",
     "@types/react": "^18.0.14",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.4.7",
     "less": "^4.1.3",
     "plotly.js": "^2.12.1",
+    "postcss": "^8.4.14",
     "react-is": "^18.2.0",
+    "tailwindcss": "^3.1.5",
     "typescript": "^4.7.4",
     "vite": "^2.3.2",
     "vite-plugin-markdown": "^2.0.2",
