--- a/policyengine/countries/us/reform_parameters.yaml
+++ b/policyengine/countries/us/reform_parameters.yaml
@@ -140,6 +140,16 @@ reforms:
         variable: snap_dependent_care_deduction
         tests:
           - increases_net_income: false
+    abolish_ma_dependent_care_credit:
+      values:
+        2010-01-01: false
+      metadata:
+        label: Abolish MA dependent care credit
+        name: abolish_ma_dependent_care_credit
+        unit: abolition
+        variable: ma_dependent_care_credit_amount
+        tests:
+          - increases_net_income: false
   state_specific:
     description: Simulate reforms on a specific state of the US.
     values:
