Add WA as state-specific analysis

--- a/policyengine/countries/us/reform_parameters.yaml
+++ b/policyengine/countries/us/reform_parameters.yaml
@@ -172,5 +172,7 @@ reforms:
           value: United States
         - key: MA
           value: Massachusetts
+        - key: WA
+          value: Washington
       value_type: Enum
 
